fix: primary color error, header spacing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,23 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
+/*#TODO Escolher cores para borda, input e DARK MODE*/
 @layer base {
-    :root {
-      --background: '#e6e6e6';
-      --content: '#000000',
-      --primary: '#2664eb';
-      --secondary: '#0f172a';
-      --emphasize: '#64748b';
-      --success: '#339966';
-      --error: '#ef4444';
-      --border: '#2563eb';//#TODO Escolher cores para borda, input e DARK MODE
-      --input: '#e2e8f0';//#TODO
-      --radius: 0.5rem;
-    }
-   
-    .dark {
-      --background: '	#020817';
-      --primary: '	#3b82f6';
-    }
+  :root {
+    --background: 0 0% 90%;
+    --black: 0 0% 0%;
+    --white: 0 0% 100%;
+    --primary: 221 83.2% 54.3%;
+    --secondary: 222 47% 11%;
+    --emphasize: 215 16% 47%;
+    --success: 150 50% 40%;
+    --error: 0 84% 60%;
+    --border: 221 83% 53%;
+    --input: 214 32% 91%;
+    --radius: 0.5rem;
   }
-  
+}
